--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,42 @@
+.nav-ul li{
+  display: inline-block;
+  padding:10px;
+
+}
+.nav-ul{
+  /* text-decoration: none; */
+  background-color: aquamarine;
+  margin:0 px;
+  padding: 5px;
+
+}
+.nav-ul li a{
+  text-decoration: none;
+}
+
+.inputbox {
+  display: block;
+  margin-top: 20px;
+  border: 1px solid rgb(179, 145, 107);
+  padding: 12px;
+  width: 350px;
+}
+.footer {
+  background-color: black;
+  width: 100%;
+  text-align: center;
+  font-size: 20px;
+  padding: 20px;
+  color: white;
+}
+.register {
+  margin-left: 30%;
+ color: rgb(1, 7, 10);
+}
+
+
+
+
 .App {
   text-align: center;
 }
